# ERTbot

./: .gitignore  CMakeLists.txt  Doxyfile  ERTbot  README.md  script_template.sh  test_template.txt  update_documentation.sh
.github/workflows/: self-hosted-tests.yml
docs/: api.md
docs/html/: annotated.html  api_8c.html  api_8c__incl.dot  api_8h.html  api_8h__dep__incl.dot  api_8h_source.html  classes.html  config_8h.html  config_8h__dep__incl.dot  config_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  features_8c.html  features_8c__incl.dot  features_8h.html  features_8h__dep__incl.dot  features_8h_source.html  files.html  functions.html  functions_vars.html  githubAPI_8c.html  githubAPI_8c__incl.dot  githubAPI_8h.html  githubAPI_8h__dep__incl.dot  githubAPI_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_j.html  globals_l.html  globals_m.html  (+57 more)
headerFiles/: api.h  config.h  features.h  githubAPI.h  helperFunctions.h  markdownToPDF.h  sheetAPI.h  slackAPI.h  stringTools.h  struct.h  wikiAPI.h
include/: ERTbot_command.h  ERTbot_common.h  ERTbot_config.h  ERTbot_features.h  api.h  command.h  common.h  config.h  features.h  helperFunctions.h  log.h  markdownToPDF.h  requirements.h  slackAPI.h  stringTools.h  struct.h  wikiAPI.h
include/api/: apiHelpers.h  githubAPI.h  sheetAPI.h  slackAPI.h  wikiAPI.h
include/helpers/: pageListHelpers.h  requirementsHelpers.h  stringHelpers.h  timeHelpers.h  wikiLinksHelpers.h
sourceFiles/: api.c  features.c  githubAPI.c  helperFunctions.c  main.c  markdownToPDF.c  sheetAPI.c  slackAPI.c  stringTools.c  wikiAPI.c
src/: api.c  command.c  error.c  features.c  githubAPI.c  helperFunctions.c  log.c  main.c  markdownToPDF.c  requirements.c  sheetAPI.c  slackAPI.c  stringTools.c  wikiAPI.c
src/api/: api.c  apiHelpers.c  githubAPI.c  sheetAPI.c  slackAPI.c  wikiAPI.c
src/features/: appendMentionedIn.c  buildAcronymsList.c  buildImageTracker.c  buildLinksTracker.c  buildLocalGraph.c  buildMap.c  createMissingRequirementPages.c  getPages.c  markdownToPDF.c  movePage.c  onPageUpdate.c  replaceText.c  syncDrlToSheet.c  syncSheetToDrl.c  updateLinksTracker.c  updateRequirementPage.c  updateStatsPage.c  updateVcdPage.c
src/helpers/: links.c  pageList.c  pageListHelpers.c  requirements.c  requirementsHelpers.c  stringHelpers.c  timeHelpers.c  wikiLinksHelpers.c
tests/: test_error.c  test_main.c  test_stringHelpers.c  test_suites.h
tests/api/: test_wikiAPI.c
tests/features/: test_createMissingRequirementPages.c  test_syncDrlToSheet.c  test_updateRequirementPages.c  test_updateVcdPage.c
tests/helpers/: test_requirementHelpers.c  test_stringHelpers.c
